# call-me-maybe

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json
llm_sdk/: pyproject.toml
src/: __main__.py  io_manager.py  schema.py
src/automata/: __init__.py  compiler.py  pda.py  primitives.py
src/dfs/: __init__.py  dfs.py
src/engine/: __init__.py  bootstrap.py  generator.py  pipeline.py  prompt_builder.py
src/trie/: __init__.py  trie.py
src/utils/: tracer.py
tests/: test_bootstrap.py  test_dfs.py  test_engine.py  test_fsm_primitives.py  test_io_manager.py  test_pda.py  test_pipeline.py  test_schema_compiler.py  test_trie.py  test_triel.py
